[FDCORE-1921] Added “whitelisted” in all contact responses (#116)
